--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <h1>Mi primer Commit</h1>
+    <p>Estoy aprendiendo GIT</p>
 </body>
 </html>
